# pixie

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.c
demos/floodfill/: main.c
demos/resize/: main.c
demos/shapes/: main.c
examples/floodfill/: main.c
examples/raytrace/: main.c
examples/resize/: main.c
examples/shapes/: main.c
include/: canvas.h  color.h  core.h  draw.h  floodfill.h  gray.h  pixie.h  point.h  point_list.h  rect.h  resize.h  rgb.h  rgba.h
src/: canvas.c  color.c  core.c  draw.c  floodfill.c  gray.c  point.c  point_list.c  rect.c  resize.c  rgb.c
